--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Tayyab Naseem | Full-Stack Developer</title>
     <meta name="description" content="Full-Stack MERN Developer specializing in Node.js, Discord.js, FiveM Development, and PHP Backend. Available for projects and full-time opportunities.">
     <meta name="keywords" content="MERN Developer, Node.js, Discord.js, FiveM, PHP Developer, Full Stack Developer, Backend Developer">
-    
+    <meta name="google-site-verification" content="vnJBY2WgPKlGJ9i5V8bHrsM1DLecziKanb7lz65gY8o" />
     <!-- Favicons -->
     <link href="assets/img/favicon.png" rel="icon">
     <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
